src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwP0.25-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized true\n    open-floating true\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 320 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 320 × 360, bounds: 1280 × 720, states: []
size: 320 × 360, bounds: 1280 × 720, states: [Activated]
